# poke-battle-bot

./: ARCHITECTURE_SUMMARY.md  Makefile  README.md  config.py  pyproject.toml
agents/: Test1.json  Test2.json  Test3.json  TestBot1.json  TestBot2.json  TestBot3.json  TestBot4.json
application/: __init__.py
application/ports/: __init__.py  battle_executor.py  neural_network.py  team_validator.py
application/use_cases/: __init__.py  benchmark_agent.py  execute_battle.py  generate_team.py  mutate_population.py  run_league_round.py
data/league/: config.json  matches.csv  standings.csv
domain/: __init__.py
domain/entities/: __init__.py  agent.py  pokemon.py  team.py
domain/repositories/: __init__.py  agent_repository.py  league_repository.py  pokedex_repository.py
domain/services/: __init__.py  battle_strategy.py  mutation_service.py  rating_service.py  tournament_service.py
domain/value_objects/: __init__.py  battle_state.py  move_decision.py
infrastructure/: __init__.py  di_container.py
infrastructure/adapters/: __init__.py  baseline_strategies.py  nn_battle_strategy.py  poke_env_battle_adapter.py  tensorflow_nn_adapter.py
infrastructure/repositories/: __init__.py  csv_pokedex_repository.py  json_agent_repository.py  pandas_league_repository.py
tests/: README.md  __init__.py  conftest.py  test_agent_entity.py  test_generate_team_simple.py  test_hexagonal_architecture.py  test_mutation_service_simple.py  test_pandas_repository.py  test_team_entity.py  test_tournament_service_simple.py
